--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -11,3 +11,13 @@
     margin-top: 10px;
     padding-bottom: 10px;
 }
+@media (max-width: 700px) {
+    .main-div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 5px;
+        width: 100vw;
+    }
+}
