--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,22 @@
 }
 
 @media (max-width: 1000px){
-  .pageTitle{
-    
+  .pageTitle{  
     font-size: 6.4vw;
     
   }
+}
+
+@media (max-width: 700px) {
+  .main-div{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 10px 5px;
+      width: 100vw;
+  }
+}
+.trending{
+  
 }
