searchbar UI issue fixed

--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -11,3 +11,9 @@
     margin-top: 10px;
     padding-bottom: 10px;
 }
+.searchInput-bar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 91vw;
+}
